# dreame-mocker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  test_client.py
src/dreame_mocker/: __init__.py  auth.py  cli.py  const.py  map_encoder.py  models.py  mqtt.py  server.py  state.py
src/dreame_mocker/client/: __init__.py  auth.py  cloud.py  crypto.py  device.py  errors.py  map_decoder.py  regions.py  tokens.py  transport.py
